# soroscope

./: .gitattributes  Cargo.toml  FEE_MARKET_IMPLEMENTATION_SUMMARY.md  FLASH_LOAN_CALLBACK_GUIDE.md.txt  README.md  RELEASE_NOTES_TESTNET.md
.github/workflows/: ci.yml  deploy-frontend.yml
contracts/: EMERGENCY_GUARD_INTEGRATION.md
contracts/auction_factory/: Cargo.toml
contracts/auction_factory/src/: lib.rs  test.rs
contracts/batch_transfer/: Cargo.toml
contracts/batch_transfer/src/: lib.rs  test.rs
contracts/cdp/: Cargo.toml
contracts/cdp/src/: lib.rs  test.rs
contracts/concentrated_amm/: Cargo.toml
contracts/concentrated_amm/src/: lib.rs  math.rs  test.rs
contracts/cross_chain_payload/: Cargo.toml
contracts/cross_chain_payload/src/: payload.rs  signatures.rs  test.rs
contracts/cross_chain_verifier/: Cargo.toml  PERFORMANCE_OPTIMIZATION.md  README.md  SIGNATURE_VERIFICATION.md
contracts/cross_chain_verifier/src/: lib.rs  test.rs
contracts/crucible-example-gasless/: Cargo.toml
contracts/crucible-example-gasless/src/: lib.rs  test.rs
contracts/did_registry/: Cargo.toml
contracts/dutch_auction/: Cargo.toml
contracts/emergency_guard/: Cargo.toml  README.md
contracts/english_auction/: Cargo.toml
contracts/english_auction/src/: lib.rs  test.rs
contracts/error_codes/: Cargo.toml
contracts/factory/: Cargo.toml  README.md
contracts/factory/src/: lib.rs  test.rs
contracts/flash_loan_vault/: Cargo.toml
contracts/governance/: Cargo.toml  PR_DESCRIPTION.md  README.md
contracts/governance/src/: admin.rs  contract.rs  lib.rs  proposal.rs  storage_types.rs  test.rs  voting.rs
contracts/hybrid_amm_lob/: Cargo.toml
contracts/liquidity_pool/: Cargo.toml  README.md
contracts/liquidity_pool/src/: lib.rs  test.rs
contracts/liquidity_pool/test_snapshots/fuzz_test/: test_swap_invariant.1.json  test_swap_invariant.10.json  test_swap_invariant.100.json  test_swap_invariant.101.json  test_swap_invariant.102.json  test_swap_invariant.103.json  test_swap_invariant.104.json  test_swap_invariant.105.json  test_swap_invariant.106.json  test_swap_invariant.107.json  test_swap_invariant.108.json  test_swap_invariant.109.json  test_swap_invariant.11.json  test_swap_invariant.110.json  test_swap_invariant.111.json  test_swap_invariant.112.json  test_swap_invariant.113.json  test_swap_invariant.114.json  test_swap_invariant.115.json  test_swap_invariant.116.json  test_swap_invariant.117.json  test_swap_invariant.118.json  test_swap_invariant.119.json  test_swap_invariant.12.json  test_swap_invariant.120.json  test_swap_invariant.121.json  test_swap_invariant.122.json  test_swap_invariant.123.json  test_swap_invariant.124.json  test_swap_invariant.125.json  test_swap_invariant.126.json  test_swap_invariant.127.json  test_swap_invariant.128.json  test_swap_invariant.129.json  test_swap_invariant.13.json  test_swap_invariant.130.json  test_swap_invariant.131.json  test_swap_invariant.132.json  test_swap_invariant.133.json  test_swap_invariant.134.json  (+216 more)
contracts/liquidity_pool/test_snapshots/test/: test_approve.1.json  test_approve_expired.1.json  test_basic_flow.1.json  test_burn.1.json  test_deposit_when_paused.1.json  test_deposit_zero_amount.1.json  test_events.1.json  test_get_fee_default.1.json  test_pause_and_unpause.1.json  test_set_fee_above_max.1.json  test_set_fee_valid.1.json  test_swap_slippage_exceeded.1.json  test_swap_when_paused.1.json  test_token_interface.1.json  test_transfer.1.json  test_transfer_from.1.json  test_transfer_from_insufficient_allowance.1.json  test_transfer_from_insufficient_balance.1.json  test_transfer_insufficient_balance.1.json  test_withdraw_insufficient_shares.1.json  test_withdraw_when_paused.1.json
contracts/math/: Cargo.toml
contracts/multi_yield_vault/: Cargo.toml
contracts/oracle_aggregator/: Cargo.toml
contracts/private_transfer/: Cargo.toml
contracts/proxy/: Cargo.toml
contracts/soulbound_token/: Cargo.toml
contracts/soulbound_token/src/: balance.rs  contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
contracts/staking_rewards/: Cargo.toml  README.md
contracts/staking_rewards/src/: lib.rs  test.rs
contracts/timelocked_escrow/: Cargo.toml
contracts/token/: Cargo.toml  README.md
contracts/token/src/: contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs  test_admin_rotation.rs  test_granular_pause.rs  test_multisig.rs
contracts/token/test_snapshots/test/: test_allowance.1.json  test_mint_and_transfer.1.json
contracts/twap_oracle/: Cargo.toml
contracts/typed_data_auth/: Cargo.toml
core/: Cargo.toml  FEE_MARKET_README.md
core/benches/: merkle_bench.rs
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: merkle_build.rs  merkle_hex.rs  merkle_proof.rs
core/migrations/: 002_create_fee_tables.sql
core/src/: auth.rs  benchmarks.rs  cache.rs  errors.rs  fee_analytics.rs  fee_collector.rs  fee_store.rs  fuzz_simulation.rs  fuzz_tests.rs  gas_golfing.rs  insights.rs  jobs.rs  lib.rs  main.rs  merkle_tree.rs  routing.rs  rpc_provider.rs  simulation.rs  simulation_service.rs  wasm_branch_analysis.rs  ws.rs
core/src/cache/: disk.rs  mod.rs
core/src/engine/: mocks.rs  mod.rs  noop_cache.rs  real_provider.rs  simulation_engine.rs  traits.rs
core/src/gas_golfing/: README.md
core/src/runner/: local.rs  mod.rs
docs/: ARCHITECTURE.md  CROSS_CHAIN_VERIFIER_PR.md  CROSS_CHAIN_VERIFIER_STANDARD.md  DOCUMENTATION_INDEX.md  EMERGENCY_GUARD_SETUP.md  FEE_MARKET_QUICKSTART.md  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  PR_DESCRIPTION.md  README_EMERGENCY_GUARD.md  VISUAL_GUIDE.md  storage_refactor_analysis.md  token_guard_storage_analysis.md
scripts/: deploy_cross_chain_verifier.sh
tests/: engine_di_test.rs
web/: package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
web/components/: CallGraphVisualizer.tsx  ErrorBoundary.tsx  GasUsageChart.tsx  NutritionLabel.tsx  ResourceHeatmap.tsx  Resultviewer.tsx  WasmUpload.tsx  upload-zone.tsx
web/lib/: api.ts  errorHandling.ts  sorobantypes.ts
web/pages/: _app.tsx  index.tsx
web/wasm-upload/: page.tsx
(+37 files in other folders)
