[package]
name = "soroscope-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "soroscope_core"
path = "src/lib.rs"

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
config = "0.14"
axum = { version = "0.7", features = ["multipart"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
hex = "0.4"
stellar-strkey = "0.0.9"
jsonwebtoken = "9"
ed25519-dalek = "2"
sha2 = "0.10"
rand = "0.8"
moka = { version = "0.12", features = ["future"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "sqlite", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
