[package]
name = "soroban-auction-factory-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
english-auction-contract = { package = "soroban-english-auction-contract", path = "../english_auction" }
dutch-auction-contract = { package = "soroban-dutch-auction-contract", path = "../dutch_auction" }
token-contract = { package = "soroban-token-contract", path = "../token" }

[features]
testutils = []