[package]
name = "soroscope-governance-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
emergency_guard = { path = "../emergency_guard" }
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
emergency_guard = { path = "../emergency_guard" }
